Updated readme to include new keybindings for all platforms removed add note until it is actually implemented removed erroneous console.log statement did a bit of code clean up fixed #14 issue where task text was individual characters updated regex updated style sheet fixed #15

--- a/stylesheets/tasks.less
+++ b/stylesheets/tasks.less
@@ -1,13 +1,14 @@
 @import "ui-variables";
 
 .editor {
-  .tasks {
+  .project {
+    color: @text-color-warning;
+  }
+  .task {
 
-    &.header { color: @text-color-warning; }
+    &.task { color: #FFF; }
 
-    &.text { color: #FFF; }
-
-    &.task { color: @text-color-subtle; }
+    &.note { color: lighten(@text-color-subtle, 20%); }
 
     &.marker { color: @text-color; }
 
