fixed #18 - marker color adjusted fixed bug in project with space at end

--- a/stylesheets/tasks.less
+++ b/stylesheets/tasks.less
@@ -10,7 +10,7 @@
 
     &.note { color: lighten(@text-color-subtle, 20%); }
 
-    &.marker { color: @text-color; }
+    &.marker { color: #FFF; }
 
     &.attribute { color: lighten(@text-color-info, 20%); }
 
